--- a/app/src/main/res/layout/activity_lista_contatos.xml
+++ b/app/src/main/res/layout/activity_lista_contatos.xml
@@ -10,19 +10,19 @@
         android:id="@+id/listview_mainativity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        >
 
-
+    </ListView>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_ativity_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_action_add"
+        app:srcCompat="@android:drawable/ic_input_add"
         android:layout_marginRight="16dp" />
-
 
 </RelativeLayout>
